--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ footer h2 {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
+.social-link img {
+    width: 75%;
+}
+
 .social-link::before {
     content: '';
     position: absolute;
